--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
             <artifactId>ucanaccess</artifactId>
             <version>4.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE130</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
