--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>chavez.cesar.agendav2</groupId>
     <artifactId>agendaV2</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0</version>
     <dependencies>
         <dependency>
             <groupId>com.toedter</groupId>
